--- a/eventa.css
+++ b/eventa.css
@@ -16,13 +16,14 @@ a {
 
 .container {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background: #000;
   color: #fff;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 20px;
 }
 .container form {
   margin: auto;
@@ -72,4 +73,13 @@ a {
 .container form button[type=submit]:hover {
   background: #000;
   color: #fff;
+}
+
+@media screen and (max-width: 600px) {
+  .container form {
+    width: 100%;
+  }
+  .container form .poster-row {
+    flex-direction: column;
+  }
 }
