--- a/eventb.scss
+++ b/eventb.scss
@@ -3,13 +3,14 @@
 
 .container {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background: #000;
   color: #fff;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 20px;
   form {
     h2 {
       text-align: center;
@@ -56,6 +57,17 @@
       &:hover {
         background: #000;
         color: #fff;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .container {
+    form {
+      width: 100%;
+      .poster-row {
+        flex-direction: column;
       }
     }
   }
