--- a/style.scss
+++ b/style.scss
@@ -735,7 +735,7 @@ body {
         flex-direction: column;
         .modal-photo {
           width: 100%;
-          margin-top: 100px;
+          margin-top: 150px;
         }
         form {
           width: 100%;
@@ -755,8 +755,9 @@ body {
         }
       }
       .modal-close {
-        top: 20px;
+        top: 180px;
         right: 20px;
+        z-index: 9999;
       }
     }
   }
