--- a/eventa.css
+++ b/eventa.css
@@ -17,7 +17,7 @@ a {
 .container {
   width: 100%;
   height: 100%;
-  background: #000;
+  background: url("./Frame 5.png") center/cover no-repeat;
   color: #fff;
   display: flex;
   flex-direction: column;
@@ -26,10 +26,18 @@ a {
   padding: 20px;
 }
 .container form {
+  position: relative;
   margin: auto;
   display: flex;
   flex-direction: column;
   gap: 1rem;
+}
+.container form #event-close {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  font-size: 2rem;
+  cursor: pointer;
 }
 .container form h2 {
   text-align: center;
@@ -78,6 +86,12 @@ a {
 @media screen and (max-width: 600px) {
   .container form {
     width: 100%;
+  }
+  .container form #event-close {
+    top: 60px;
+  }
+  .container form h2 {
+    font-size: 1.4rem;
   }
   .container form .poster-row {
     flex-direction: column;
