--- a/eventb.scss
+++ b/eventb.scss
@@ -4,14 +4,24 @@
 .container {
   width: 100%;
   height: 100%;
-  background: #000;
+  // background: #000;
+  background: url("./Frame\ 5.png") center/cover no-repeat;
   color: #fff;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 20px;
+
   form {
+    position: relative;
+    #event-close {
+      position: absolute;
+      top: 10px;
+      right: 20px;
+      font-size: 2rem;
+      cursor: pointer;
+    }
     h2 {
       text-align: center;
       font-size: 2rem;
@@ -66,6 +76,12 @@
   .container {
     form {
       width: 100%;
+      #event-close {
+        top: 60px;
+      }
+      h2 {
+        font-size: 1.1rem;
+      }
       .poster-row {
         flex-direction: column;
       }
