--- a/eventa.scss
+++ b/eventa.scss
@@ -14,7 +14,7 @@
   padding: 20px;
   form {
     position: relative;
-    #event-close {
+    #eventA-close {
       position: absolute;
       top: 10px;
       right: 20px;
@@ -75,7 +75,7 @@
   .container {
     form {
       width: 100%;
-      #event-close {
+      #eventA-close {
         top: 60px;
       }
       h2 {
