--- a/eventb.scss
+++ b/eventb.scss
@@ -15,7 +15,7 @@
 
   form {
     position: relative;
-    #event-close {
+    #eventB-close {
       position: absolute;
       top: 10px;
       right: 20px;
@@ -76,7 +76,7 @@
   .container {
     form {
       width: 100%;
-      #event-close {
+      #eventB-close {
         top: 60px;
       }
       h2 {
